# residual

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/ReSDL/: AudioDevice.h  GameController.h  Joystick.h  ReSDL.h  ReSDLCommon.h  ReSDLCore.h  ReSDLImage.h  ReSDLTypes.h  Renderer.h  Surface.h  Texture.h  Window.h
src/: ReSDLCore.cpp  ReSDLTypes.cpp
test/Engine/: CMakeLists.txt
test/Engine/Project.build/Debug/Engine.build/: dgph
test/Engine/includes/Engine/: Engine.h  Utilities.h
test/Engine/includes/Engine/Input/: AxisInputManager.h  ButtonInputManager.h  EventManager.h
test/Engine/libsdlTest.xcodeproj/: project.pbxproj
test/Engine/libsdlTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/Engine/libsdlTest.xcodeproj/project.xcworkspace/xcuserdata/astahl.xcuserdatad/: UserInterfaceState.xcuserstate
test/Engine/libsdlTest.xcodeproj/xcuserdata/astahl.xcuserdatad/xcschemes/: Engine.xcscheme  libsdlTest.xcscheme  xcschememanagement.plist
test/Engine/src/: Engine.cpp
test/Game1/: CMakeLists.txt
test/Game1/src/: Main.cpp
test/Goose/: CMakeLists.txt
test/Goose/src/: main.cpp
